# sqrt-space-kv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  RESULTS.md  SECURITY.md  arxiv-package.edn  arxiv-status.edn  package.edn
.github/workflows/: publish.yml  python-ci.yml  rust-ci.yml
90-docs/adr/: 2607101000-sqrt-space-kv-results-home.md  2607101010-arxiv-submit-cs-cl.md  2607190900-python-rust-library-port.md
benchmarks/: glm-5.2-ud-iq2m-llamacpp-rpc-cpu-moe-2026-07-04.md  ollama-gemma4-ctx-hi.json  ollama-gemma4-ctx.json  sqrt-kv-mac-m4-smollm135.json  sqrt-kv-mac-m4-smollm135.md  sqrt-kv-mac-m4-validation.json  sqrt-kv-mac-m4-validation.md  sqrt-kv-mac-m4.json  sqrt-kv-modal-Qwen3.6-35B-A3B.md  sqrt-kv-modal-Qwen__Qwen2.5-14B-Instruct.json  sqrt-kv-modal-Qwen__Qwen2.5-7B-Instruct.json  sqrt-kv-modal-Qwen__Qwen3.6-35B-A3B.json  sqrt-kv-modal-summary.md
docs/: README.md  arxiv_abstract.txt  hf_paper_card.md  sqrt-space-cosci.md  sqrt_space_llm_kv.md
paper/: Makefile  abstract.txt  references.bib  sqrt_space_kv.tex
python/: README.md  pyproject.toml
python/src/sqrt_space_kv/: __init__.py  attention.py  cost_model.py  residency.py
python/tests/: conftest.py  test_attention.py  test_cost_model.py  test_residency.py
rust/: Cargo.toml  README.md
rust/src/: attention.rs  cost_model.rs  lib.rs  residency.rs
rust/tests/: golden.rs
tests/fixtures/: golden.json
